--- a/huang/assignments/html/faqs.html
+++ b/huang/assignments/html/faqs.html
@@ -60,6 +60,17 @@
                         Customer Service
                     </a>
                 </li>
+                <li>
+                    <a href="./gameInfo.html">
+                        Game Information
+                    </a>
+                </li>
+
+                <li>
+                    <a href="./movies.html">
+                        Pokemon Movies
+                    </a>
+                </li>
             </ul>
         </div>
 
