--- a/huang/labs/index.html
+++ b/huang/labs/index.html
@@ -84,6 +84,8 @@
             <li><a href="./lab3.html"><b>Lab3</b></a></li>
             <li><a href="./lab4.html"><b>Lab4</b></a></li>
             <li><a href="./lab5.html"><b>Lab5</b></a></li>
+            <li><a href="./lab6.html"><b>Lab6</b></a></li>
+            <li><a href="./lab7.html"><b>Lab7</b></a></li>
         </ul>
     </div>
 </div>
