--- a/huang/assignments/html/customerservice.html
+++ b/huang/assignments/html/customerservice.html
@@ -65,6 +65,11 @@
                         Game Information
                     </a>
                 </li>
+                <li>
+                    <a href="./movies.html">
+                        Pokemon Movies
+                    </a>
+                </li>
             </ul>
         </div>
 
