--- a/huang/assignments/html/login.html
+++ b/huang/assignments/html/login.html
@@ -62,6 +62,11 @@
                         Game Information
                     </a>
                 </li>
+                <li>
+                    <a href="./movies.html">
+                        Pokemon Movies
+                    </a>
+                </li>
             </ul>
         </div>
 
