--- a/huang/assignments/html/bulbasaur.html
+++ b/huang/assignments/html/bulbasaur.html
@@ -7,14 +7,11 @@
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="../css/signup.css">
     <script type="text/javascript" src="../javascript/layoutUtil.js"></script>
-    <script type="text/javascript">
-        userName = prompt("Tell us your name:");
-    </script>
 </head>
 
 <body>
 <header class="page-head">
-    <a href="../index.html">
+    <a href="../../index.html">
         <img class="logo1" src="../media/Wiki-wordmark.png" alt="wiki logo" title=""/>
     </a>
     <h1>Pokémon Wikipedia</h1>
@@ -37,10 +34,12 @@
     </script>
 
     <div class="content">
-        <h2>Customer Service System </h2>
-        <h3>Welcome User:
-            <script type="text/javascript">document.write(userName)</script>
-        </h3>
+        <script type="text/javascript">
+            createPokemons();
+            document.write(pokemons[0].generatePage());
+            // add links
+            document.write(addLinksToPokemonPage());
+        </script>
     </div>
 </div>
 <footer>
@@ -53,6 +52,4 @@
 </footer>
 
 </body>
-
-
 </html>
