--- a/huang/assignments/html/faqs.html
+++ b/huang/assignments/html/faqs.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="../css/signup.css">
+    <script type="text/javascript" src="../javascript/layoutUtil.js"></script>
     <script type="text/javascript">
         alert("This is FAQ section! \n Let me know if you can't find your question here!");
     </script>
@@ -31,76 +32,9 @@
 </header>
 
 <div class="container">
-    <div class="navigation">
-        <div class="portal">
-            <h3>Main Navigation</h3>
-            <ul>
-                <li>
-                    <a href="../index.html">
-                        Main Page
-                    </a>
-                </li>
-                <li>
-                    <a href="./faqs.html">
-                        <b>FAQs</b>
-                    </a>
-                </li>
-                <li>
-                    <a href="./games.html">
-                        What's New
-                    </a>
-                </li>
-                <li>
-                    <a href="./aboutus.html">
-                        About Us
-                    </a>
-                </li>
-                <li>
-                    <a href="./customerservice.html">
-                        Customer Service
-                    </a>
-                </li>
-                <li>
-                    <a href="./gameInfo.html">
-                        Game Information
-                    </a>
-                </li>
-
-                <li>
-                    <a href="./movies.html">
-                        Pokemon Movies
-                    </a>
-                </li>
-            </ul>
-        </div>
-
-        <div class="portal">
-            <h3>Quick Link</h3>
-            <ul>
-                <li>
-                    <a href="../index.html#journey">
-                        Journey
-                    </a>
-                </li>
-                <li>
-                    <a href="../index.html#recent-news">
-                        News
-                    </a>
-                </li>
-                <li>
-                    <a href="../index.html#recent-animations">Animations</a>
-                </li>
-                <li>
-                    <a href="../index.html#recent-gifts">Recent Gifts</a>
-                </li>
-                <li>
-                    <a href="./gameInfo.html">
-                        Game Information
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
+    <script type="text/javascript">
+        createNavigationBar(false);
+    </script>
 
     <div class="content">
         <h2>Here are frequent questions for this website:</h2>
