--- a/huang/assignments/html/pokemons.html
+++ b/huang/assignments/html/pokemons.html
@@ -5,11 +5,8 @@
     <title>Pokemon Wiki</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="../css/signup.css">
     <script type="text/javascript" src="../javascript/layoutUtil.js"></script>
-    <script type="text/javascript">
-        userName = prompt("Tell us your name:");
-    </script>
+    <link rel="stylesheet" href="../css/signup.css">
 </head>
 
 <body>
@@ -37,10 +34,10 @@
     </script>
 
     <div class="content">
-        <h2>Customer Service System </h2>
-        <h3>Welcome User:
-            <script type="text/javascript">document.write(userName)</script>
-        </h3>
+        <h2>Here are the most liked Pokemons!</h2>
+        <script type="text/javascript">
+            getFavoriatePokemons();
+        </script>
     </div>
 </div>
 <footer>
@@ -53,6 +50,4 @@
 </footer>
 
 </body>
-
-
 </html>
