--- a/huang/assignments/index.html
+++ b/huang/assignments/index.html
@@ -5,6 +5,7 @@
     <title>Pokemon Wiki</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <script type="text/javascript" src="./javascript/layoutUtil.js"></script>
     <link rel="stylesheet" href="./css/index.css">
 </head>
 
@@ -28,66 +29,9 @@
 </header>
 
 <div class="container">
-    <div class="navigation">
-        <div class="portal">
-            <h3>Main Navigation</h3>
-            <ul>
-                <li>
-                    <a href="index.html">
-                        Main Page
-                    </a>
-                </li>
-                <li>
-                    <a href="./html/faqs.html">
-                        <b>FAQs</b>
-                    </a>
-                </li>
-                <li>
-                    <a href="./html/games.html">
-                        What's New
-                    </a>
-                </li>
-                <li>
-                    <a href="./html/aboutus.html">
-                        About Us
-                    </a>
-                </li>
-                <li>
-                    <a href="./html/customerservice.html">
-                        Customer Service
-                    </a>
-                </li>
-                <li>
-                    <a href="./html/gameInfo.html">
-                        Game Information
-                    </a>
-                </li>
-                <li>
-                    <a href="./html/movies.html">
-                        Pokemon Movies
-                    </a>
-                </li>
-            </ul>
-        </div>
-
-        <div class="portal">
-            <h3>Quick Link</h3>
-            <ul>
-                <li>
-                    <a href="index.html#journey">Journey</a>
-                </li>
-                <li>
-                    <a href="index.html#recent-news">New</a>
-                </li>
-                <li>
-                    <a href="index.html#recent-animations">Animations</a>
-                </li>
-                <li>
-                    <a href="index.html#recent-gifts">Recent Gifts</a>
-                </li>
-            </ul>
-        </div>
-    </div>
+    <script type="text/javascript">
+        createNavigationBar(true);
+    </script>
 
     <div class="content">
         <div class="columns">
