--- a/huang/labs/index.html
+++ b/huang/labs/index.html
@@ -86,10 +86,11 @@
             <li><a href="./lab5.html"><b>Lab5</b></a></li>
             <li><a href="./lab6.html"><b>Lab6</b></a></li>
             <li><a href="./lab7.html"><b>Lab7</b></a></li>
+            <li><a href="./lab8.html"><b>Lab8</b></a></li>
+            <li><a href="./lab9.html"><b>Lab9</b></a></li>
         </ul>
     </div>
 </div>
-
 
 <footer>
     <p><b>Posted by: </b>Xin Huang</p>
