--- a/huang/labs/index.html
+++ b/huang/labs/index.html
@@ -88,6 +88,8 @@
             <li><a href="./lab7.html"><b>Lab7</b></a></li>
             <li><a href="./lab8.html"><b>Lab8</b></a></li>
             <li><a href="./lab9.html"><b>Lab9</b></a></li>
+            <li><a href="./lab10.html"><b>Lab9</b></a></li>
+            <li><a href="./lab11.html"><b>Lab9</b></a></li>
         </ul>
     </div>
 </div>
