--- a/huang/labs/lab9.html
+++ b/huang/labs/lab9.html
@@ -5,7 +5,7 @@
     <title>Labs</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="lab8.css">
+    <link rel="stylesheet" href="lab.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
         document.write("<p>Screen Width: " + width + "</p>");
 
         myWin = window.open("", "", '"width=' + width + ',height=' + height + '"');
-        myWin.document.write('<html><head><title>Lab9</title><link rel="stylesheet" type="text/css" href="lab8.css"></head><body>');
+        myWin.document.write('<html><head><title>Lab9</title><link rel="stylesheet" type="text/css" href="lab.css"></head><body>');
 
         function printNavigatorProperties() {
             var properties = [
