--- a/huang/assignments/html/pokemons.html
+++ b/huang/assignments/html/pokemons.html
@@ -36,7 +36,7 @@
     <div class="content">
         <h2>Here are the most liked Pokemons!</h2>
         <script type="text/javascript">
-            getFavoriatePokemons();
+            getFavoriatePokemons(document.getElementsByClassName("content")[0]);
         </script>
     </div>
 </div>
