--- a/huang/index.html
+++ b/huang/index.html
@@ -82,7 +82,7 @@
         <ul>
             <li><a href="./labs/index.html"><b>Labs</b></a></li>
             <li><a href="./assignments/index.html"><b>Assignments</b></a></li>
-            <li><a href="midterm.html"><b>Midterm</b></a></li>
+            <li><a href="./midterm/midterm.html"><b>Midterm</b></a></li>
         </ul>
     </div>
 </div>
