--- a/huang/labs/lab10.html
+++ b/huang/labs/lab10.html
@@ -31,7 +31,7 @@
 
 <div id="lab10">
     <p>This is lab 10.</p>
-    <p>THis lab is about DOM.</p>
+    <p>This lab is about DOM.</p>
 </div>
 
 <script type="text/javascript">
@@ -48,7 +48,7 @@
     var textNode = document.createTextNode(answer);
     var question2Node = document.createElement("h1");
     question2Node.appendChild(textNode);
-    document.body.appendChild(question2Node)
+    document.body.appendChild(question2Node);
 
     var newDiv = document.createElement("div");
     newDiv.className = 'question1';
@@ -59,15 +59,6 @@
 
     document.body.appendChild(newDiv);
 </script>
-
-
-<footer>
-    <p><b>Posted by: </b>Xin Huang</p>
-    <p>
-        <b>Contact information: </b>
-        <a href="mailto:huangxin1657@students.itu.edu">huangxin1657@students.itu.edu</a>
-    </p>
-</footer>
 </body>
 
 </html>
