--- a/huang/assignments/html/games.html
+++ b/huang/assignments/html/games.html
@@ -11,21 +11,9 @@
 
 <body>
 <header class="page-head">
-    <a href="../index.html">
-        <img class="logo1" src="../media/Wiki-wordmark.png" alt="wiki logo" title=""/>
-    </a>
-    <h1>Pokémon Wikipedia</h1>
-    <nav>
-        <a href="./contactus.html">
-            <b>Contact Us</b>
-        </a>
-        <a href="./login.html">
-            <b>Log In</b>
-        </a>
-        <a href="./signup.html">
-            <b>Sign Up</b>
-        </a>
-    </nav>
+    <script type="text/javascript">
+        createHeader(false);
+    </script>
 </header>
 
 <div class="container">
