--- a/huang/labs/index.html
+++ b/huang/labs/index.html
@@ -84,6 +84,10 @@
             <li><a href="./lab9.html"><b>Lab9</b></a></li>
             <li><a href="./lab10.html"><b>Lab10</b></a></li>
             <li><a href="./lab11.html"><b>Lab11</b></a></li>
+            <li><a href="./lab12.html"><b>Lab12</b></a></li>
+            <li><a href="./lab13.html"><b>Lab13</b></a></li>
+            <li><a href="./lab14.html"><b>Lab14</b></a></li>
+            <li><a href="./lab15.html"><b>Lab15</b></a></li>
         </ul>
     </div>
 </div>
