--- a/huang/assignments/index.html
+++ b/huang/assignments/index.html
@@ -9,23 +9,11 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 
-<body>
+<body onload="popQuote()">
 <header class="page-head">
-    <a href="index.html">
-        <img class="logo1" src="./media/Wiki-wordmark.png" alt="wiki logo" title=""/>
-    </a>
-    <h1>Pokémon Wikipedia</h1>
-    <nav>
-        <a href="./html/contactus.html">
-            <b>Contact Us</b>
-        </a>
-        <a href="./html/login.html">
-            <b>Log In</b>
-        </a>
-        <a href="./html/signup.html">
-            <b>Sign Up</b>
-        </a>
-    </nav>
+    <script type="text/javascript">
+        createHeader(true);
+    </script>
 </header>
 
 <div class="container">
