--- a/huang/assignments/index.html
+++ b/huang/assignments/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 
-<body onload="popQuote()">
+<body>
 <header class="page-head">
     <script type="text/javascript">
         createHeader(true);
