--- a/huang/index.html
+++ b/huang/index.html
@@ -83,6 +83,7 @@
             <li><a href="./labs/index.html"><b>Labs</b></a></li>
             <li><a href="./assignments/index.html"><b>Assignments</b></a></li>
             <li><a href="./midterm/midterm.html"><b>Midterm</b></a></li>
+            <li><a href="./final/finals.html"><b>Final</b></a></li>
         </ul>
     </div>
 </div>
