--- a/huang/labs/index.html
+++ b/huang/labs/index.html
@@ -88,6 +88,11 @@
             <li><a href="./lab13.html"><b>Lab13</b></a></li>
             <li><a href="./lab14.html"><b>Lab14</b></a></li>
             <li><a href="./lab15.html"><b>Lab15</b></a></li>
+            <li><a href="./lab16.html"><b>Lab16</b></a></li>
+            <li><a href="./lab17.html"><b>Lab17</b></a></li>
+            <li><a href="./lab18.html"><b>Lab18</b></a></li>
+            <li><a href="./lab19.html"><b>Lab19</b></a></li>
+            <li><a href="./signature.html"><b>Signature Assignment</b></a></li>
         </ul>
     </div>
 </div>
